--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,5 +9,8 @@ phases:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
+artifacts:
+  files:
+    - '**/*'
     
 
