--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -27,7 +27,7 @@ phases:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
-      - cdk synth PipelineStack 
+      - cdk synth PipelineStack -o .
 artifacts:
   files:
     - '**/*'
