--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -29,6 +29,7 @@ phases:
       - echo Build completed on `date`
       - cdk synth PipelineStack -o .
 artifacts:
+  base-directory: cdk.out                                                    "
   files:
     - '**/*'
     
