--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -27,9 +27,8 @@ phases:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
-      - cdk synth PipelineStack 
-artifacts:
-  base-directory: cdk.out                                                    "
+      - cdk synth PipelineStack -o .
+artifacts:                                                 "
   files:
     - '**/*'
     
